app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos-app
  namespace: memos
  labels:
    name: memos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: memos-app-pod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: memos-app-pod
    spec:
      containers:
        - image: neosmemo/memos:stable
          name: memos-app
          resources:
            limits:
              cpu: "200m"
              memory: "128M"
          ports:
            - containerPort: 5230
              name: http
          volumeMounts:
            - mountPath: /var/opt/memos
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lh-app-pvc
